[Fix] -> Search form on Search page does not have any gap with the submit button when all the form is stacked.

--- a/assets/css/unminified/skin-1.css
+++ b/assets/css/unminified/skin-1.css
@@ -962,6 +962,10 @@ body {
   }
 }
 
+.no-results .search-field {
+  margin-bottom: 10px;
+}
+
 .ast-page-builder-template .hentry {
   margin: 0;
 }
