--- a/assets/css/unminified/style-modern.css
+++ b/assets/css/unminified/style-modern.css
@@ -5825,6 +5825,10 @@ body {
   }
 }
 
+.no-results .search-field {
+  margin-bottom: 10px;
+}
+
 .ast-page-builder-template .hentry {
   margin: 0;
 }
